# CP_decomp_app

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/modules/: FindOrFetchBTAS.cmake  FindOrFetchH5.cmake
